# DMI

./: .gitignore  .python-version  README.md  buildstuff  commands.txt  dmi.spec  main.py  pyproject.toml  start.bat  start.sh
static/: app.html  app.js  index.html  style.css
static/css/: app.css  llm.css  style.css
static/js/: app.js  main.js
