[project]
name = "DM-I"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "chromadb>=1.5.1",
    "faiss-cpu>=1.13.2",
    "faiss-gpu>=1.7.2",
    "fastapi>=0.129.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
