[project]
name = "DM-I"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "chromadb==0.4.24",
    "faiss-cpu>=1.13.2",
    "faiss-gpu>=1.7.2",
    "fastapi>=0.129.2",
    "httpx>=0.28.1",
    "numpy==1.26.4",
    "posthog>=5.4.0",
    "pydantic>=2.12.5",
    "pyinstaller>=6.19.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
]
